signup added with imgbb photo setup

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@
   VITE_storageBucket= cars-doctor-bebff.appspot.com
   VITE_messagingSenderId= 1014607929431
   VITE_appId= 1:1014607929431:web:a1076b6e9b939fa9124312
+  
+  VITE_IMGBB_KEY= 1c0532f27dc3041aae47d6fd9d658c7f
